# cpplex

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  cpplex.sln
pilal/: CMakeLists.txt  pilal.vcproj
pilal/include/: divisionbyzeroexception.h  indexoutofboundexception.h  matrix.h  matrixissingularexception.h  matrixnotsquareexception.h  memoryreachedoutexception.h  notavectorexception.h  pilal.h  pilalexceptions.h  sizemismatchexception.h
pilal/src/: matrix.cc
problems/: small.problem  template.problem  test.problem
simplex/: CMakeLists.txt  simplex.vcproj
simplex/include/: columnset.h  conicalhull.h  constraint.h  datamismatchexception.h  matrix.h  objectivefunction.h  simplex.h  simplexexceptions.h  variable.h
simplex/src/: columnset.cc  constraint.cc  objectivefunction.cc  simplex.cc  variable.cc
solver/: conicalhull.cc  solver.cc  solver.vcproj
